syntax = "proto3";
package todo;

option go_package = "github.com/rashidkalwar/todo-grpc/protos/todo";

service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (Todo){}
    rpc ReadTodo(ReadTodoRequest) returns (Todo){}
    rpc ReadAllTodos(NullRequest) returns (stream Todos){}
    rpc UpdateTodo(UpdateTodoRequest) returns (Todo){}
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse){}
}

message CreateTodoRequest {
    string text = 1;
}

message Todo {
    string id = 1;
    string text = 2;
    bool completed = 3;
}

message ReadTodoRequest {
    string id = 1;
}

message NullRequest {}

message Todos {
    repeated Todo todos = 1;
}

message UpdateTodoRequest {
    string id = 1;
    string text = 2;
    bool completed = 3;
}

message DeleteTodoRequest {
    string id = 1;
}

message DeleteTodoResponse {
    string message = 1;
}
